style: Fix mobile overflow and about me section sizing

--- a/src/components/socialbuttons/socialbuttons.module.css
+++ b/src/components/socialbuttons/socialbuttons.module.css
@@ -9,7 +9,7 @@
 .social-button {
 	display: flex;
 	flex-direction: column;
-	width: 5rem;
+	width: 8rem;
 }
 
 .social-link {
@@ -19,7 +19,7 @@
 	margin: 0 1rem;
 	padding: 0;
 	opacity: 0.92;
-	font-size: clamp(1.5rem, 2.5rem, 4rem);
+	font-size: clamp(1.5rem, 3.5rem, 5rem);
 	transition: transform 0.3s ease-in-out, color 0.3s ease-in-out;
 }
 
@@ -46,8 +46,4 @@
 
 .social-link span:first-of-type:hover {
 	transform: rotate(6deg);
-}
-
-.code-pen-icon {
-	font-size: 2rem;
 }
