--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -30,7 +30,7 @@
 
 .social-container {
 	display: flex;
-	flex: 1 1 50%;
+	flex: 1 1 45%;
 	justify-content: center;
 	align-items: center;
 	flex-wrap: wrap-reverse;
@@ -40,9 +40,11 @@
 }
 
 .contact-about {
-	flex: 1 1 50%;
+	flex: 1 1 45%;
 	min-width: 25rem;
 	padding: 0 1rem;
+	margin: 0 1rem 1rem 1rem;
+	background: hsla(0, 0%, 0%, 0.25);
 	line-height: 1.7;
 	text-align: left;
 }
